use a better view structure for bar

--- a/TinyStore/Cart/UICollapseView.xib
+++ b/TinyStore/Cart/UICollapseView.xib
@@ -26,32 +26,42 @@
                         <constraint firstAttribute="height" constant="10" id="1cr-2a-b2u"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uV7-Gl-gRI">
-                    <rect key="frame" x="0.0" y="215" width="375" height="100"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="100" id="htl-9J-Hz7"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hsN-4l-bgb">
-                    <rect key="frame" x="0.0" y="305" width="375" height="60"/>
-                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="265" width="375" height="100"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRU-rN-Zgc">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eRj-Ln-b2x">
+                            <rect key="frame" x="0.0" y="40" width="375" height="60"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="Bcd-rV-e4g"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="JMT-BL-v7I"/>
+                        <constraint firstAttribute="bottom" secondItem="eRj-Ln-b2x" secondAttribute="bottom" id="DOc-22-zgp"/>
+                        <constraint firstAttribute="height" constant="100" id="JMT-BL-v7I"/>
+                        <constraint firstItem="lRU-rN-Zgc" firstAttribute="leading" secondItem="hsN-4l-bgb" secondAttribute="leading" id="Jke-or-oIJ"/>
+                        <constraint firstAttribute="trailing" secondItem="lRU-rN-Zgc" secondAttribute="trailing" id="N5X-8x-Ndh"/>
+                        <constraint firstItem="lRU-rN-Zgc" firstAttribute="top" secondItem="hsN-4l-bgb" secondAttribute="top" id="Qwa-Td-OQM"/>
+                        <constraint firstItem="eRj-Ln-b2x" firstAttribute="leading" secondItem="hsN-4l-bgb" secondAttribute="leading" id="Rkb-jq-Ykr"/>
+                        <constraint firstItem="eRj-Ln-b2x" firstAttribute="top" secondItem="lRU-rN-Zgc" secondAttribute="bottom" id="eb0-gd-sGJ"/>
+                        <constraint firstAttribute="trailing" secondItem="eRj-Ln-b2x" secondAttribute="trailing" id="jNv-Ho-Sxt"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="uV7-Gl-gRI" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="150" id="7V2-LD-ztC"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="2WA-tE-O6d" secondAttribute="trailing" id="ApG-s3-wPs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hsN-4l-bgb" secondAttribute="trailing" id="Hxk-Jm-VcU"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="M2e-ov-kmX" secondAttribute="bottom" id="Mm0-oG-U3c"/>
                 <constraint firstItem="2WA-tE-O6d" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Ncp-12-neE"/>
+                <constraint firstItem="hsN-4l-bgb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="150" id="Ps1-NV-OaO"/>
                 <constraint firstItem="M2e-ov-kmX" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="WJu-h0-aRw"/>
-                <constraint firstItem="uV7-Gl-gRI" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Z7s-O5-eGm"/>
-                <constraint firstItem="M2e-ov-kmX" firstAttribute="bottom" secondItem="uV7-Gl-gRI" secondAttribute="bottom" constant="60" id="bzg-1Q-zX3"/>
-                <constraint firstItem="uV7-Gl-gRI" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fPa-U5-4ad"/>
                 <constraint firstItem="hsN-4l-bgb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="fgg-lz-GOt"/>
                 <constraint firstItem="M2e-ov-kmX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="hQh-C2-kA6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="2WA-tE-O6d" secondAttribute="bottom" id="nKW-ht-rYG"/>
@@ -62,15 +72,16 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="7V2-LD-ztC"/>
+                    <exclude reference="Ps1-NV-OaO"/>
                 </mask>
             </variation>
             <connections>
                 <outlet property="backgroundView" destination="2WA-tE-O6d" id="VuS-Tu-8te"/>
-                <outlet property="barContentView" destination="uV7-Gl-gRI" id="Uz2-by-zmb"/>
-                <outlet property="barContentViewHeightConstraint" destination="htl-9J-Hz7" id="P1L-Aa-yMl"/>
-                <outlet property="barContentViewTopConstraint" destination="7V2-LD-ztC" id="Pa5-kR-Y6O"/>
-                <outlet property="barView" destination="hsN-4l-bgb" id="wAz-ph-ttF"/>
+                <outlet property="barContainerView" destination="hsN-4l-bgb" id="0ut-46-KqN"/>
+                <outlet property="barContainerViewHeightConstraint" destination="JMT-BL-v7I" id="Vzb-My-VVW"/>
+                <outlet property="barContainerViewTopConstraint" destination="Ps1-NV-OaO" id="cQd-5h-P5w"/>
+                <outlet property="barContentView" destination="lRU-rN-Zgc" id="2kg-OE-Bb0"/>
+                <outlet property="barView" destination="eRj-Ln-b2x" id="kGt-pD-oPh"/>
                 <outlet property="safeAreaBottomView" destination="M2e-ov-kmX" id="ruR-KQ-bbz"/>
                 <outlet property="safeAreaBottomViewHeightConstraint" destination="1cr-2a-b2u" id="ZKZ-tU-qBV"/>
             </connections>
