--- a/TinyStore/Cart/UICheckbox.xib
+++ b/TinyStore/Cart/UICheckbox.xib
@@ -18,17 +18,25 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JdS-KW-jLY">
                     <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihr-Zn-RIS">
+                    <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="JdS-KW-jLY" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="JHL-Ic-wcO"/>
+                <constraint firstItem="ihr-Zn-RIS" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="XyU-5a-aRt"/>
                 <constraint firstItem="JdS-KW-jLY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="edU-f1-sjK"/>
                 <constraint firstItem="JdS-KW-jLY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="gvo-d5-iPW"/>
+                <constraint firstItem="ihr-Zn-RIS" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="hyB-BX-g5A"/>
+                <constraint firstItem="ihr-Zn-RIS" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="m1R-1O-NfW"/>
                 <constraint firstAttribute="trailing" secondItem="JdS-KW-jLY" secondAttribute="trailing" id="qTc-iy-NUT"/>
+                <constraint firstItem="ihr-Zn-RIS" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="wmR-S9-I4Z"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="actionButton" destination="ihr-Zn-RIS" id="Yjt-CR-Qwk"/>
                 <outlet property="iconImageView" destination="JdS-KW-jLY" id="S1e-aC-cAD"/>
             </connections>
         </view>
