--- a/TinyStore/Cart/UINumberPickerView.xib
+++ b/TinyStore/Cart/UINumberPickerView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UICartItemQuantityPickerView" customModule="TinyStore" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UINumberPickerView" customModule="TinyStore" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
